--- a/Form_SignIn_Using_UseForm_ReactTs/index.css
+++ b/Form_SignIn_Using_UseForm_ReactTs/index.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('./assets/z7001387788198_dce68b7634207dcc8e7dfa5eff011846.jpg');
+    background: url('./assets/computer.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
