--- a/Form_SignIn_Using_UseForm_ReactTs/index.css
+++ b/Form_SignIn_Using_UseForm_ReactTs/index.css
@@ -81,3 +81,10 @@ p {
     transform: translateX(-13px);
     cursor: pointer;
 }
+
+.back {
+    margin-top: 20px;
+    border: none;
+    border-bottom: 1px solid white;
+    background: transparent;
+}
